--- a/index.html
+++ b/index.html
@@ -1,11 +1,59 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width">
-  <title>JS Bin</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width">
+    <title>css-dashboard</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="css/stylesheet.css" />
+
 </head>
+
 <body>
+    <header>
+        <div id="top-header"></div>
+        <nav>
+            <ul>
+                <li id="nav-dashboard">
+                    <img src="img/Icon_Dashboard.png">
+                </li>
+                <li id="nav-customers">
+                    <img src="img/Icon_%20Customers.png">
+                </li>
+                <li id="nav-messages"> <img src="img/Icon_%20Messages.png" </li>
+                    <li id="nav-promotions"><img src="img/Icon_%20Promotions.png">
+                    </li>
+                    <li id="nav-pagecreator"><img src="img/Icon_%20Page%20Creator.png">
+                    </li>
+                    <li id="nav-analytics"><img src="img/Icon_%20Analytics.png">
+                    </li>
+            </ul>
+            <div id="nav-dropdown">
+                <div id="dropdown-text" class="col-lg-9">
+                    <h2>Dashboard</h2>
+                </div>
+                <div id="searchbox" class="col-lg-3 col-xs-6">
+                    <div class="right-icon">
+                        <span class="glyphicon gslyphicon-search" aria-hidden="true"></span>
+                        <input type="search" class="form-control">
+                    </div>
+                </div>
+            </div>
+
+        </nav>
+    </header>
+
+    <div id="main">
+        <div id="announcement" class="col-lg-12">
+            <h5>announcement</h5>
+        </div>
+        <div class="col-lg-3" id="task">
+        </div>
+        <div class="col-lg-9"></div>
+    </div>
 
 </body>
+
 </html>
