--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 </div>
                 <div id="searchbox" class="col-lg-3 col-xs-6">
                     <div class="right-icon">
-                        <span class="glyphicon gslyphicon-search" aria-hidden="true"></span>
+                        <span class="glyphicon glyphicon-search" aria-hidden="true"></span>
                         <input type="search" class="form-control">
                     </div>
                 </div>
@@ -46,14 +46,124 @@
     </header>
 
     <div id="main">
-        <div id="announcement" class="col-lg-12">
-            <h5>announcement</h5>
+        <div id="announcement" class="row">
+            <div id="announcement-head" class="col-lg-2">
+                <h5>Announcements</h5>
+            </div>
+            <div id="announcement-txt" class="col-lg-9">
+                <p>Sociis natoque penatibus et magnis dis parturient montses, nascetur ridiculus mus. Vivamus sagittis lacus
+                </p>
+            </div>
+            <div id="announcement-btn" class="col-lg-1">
+                <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+                <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+            </div>
         </div>
-        <div class="col-lg-3" id="task">
-        </div>
-        <div class="col-lg-9"></div>
-    </div>
 
+        <div id="submain" class="row">
+            <div class="col-lg-4 left-container">
+                <div id="task">
+                    <h2>Tasks</h2>
+                    <ul>
+                        <li>Welcome Contacts</li>
+                        <li>Provide Responses</li>
+                        <li>Review Activity</li>
+                        <li>Reach Out</li>
+                    </ul>
+                </div>
+
+                <div id="recommendation">
+                    <h2>Recommendations</h2>
+
+                    <ul>
+                        <li>7 steps to getting more Fans</li>
+                        <li>Increase traction with more interactions</li>
+                        <li>Creating a Promotion</li>
+                        <li>Share More</li>
+                    </ul>
+                </div>
+            </div>
+            <div class="right-container col-lg-8">
+                <div id="analytics">
+                    <h2>Analytics</h2>
+                    <div id="activity">
+                        <div class="col-md-9">
+                            <div id="activity-txt">
+                                <div class="col-md-7">
+                                    <h6>ACTIVITY</h6>
+                                </div>
+                                <div class="dropdown col-md-3">
+                                    <button class="btn btn-custome dropdown-toggle" type="button" data-toggle="dropdown">06/28/11-07/21/11
+                                        <span class="caret"></span>
+                                    </button>
+                                    <ul class="dropdown-menu">
+                                        <li><a href="#">06/28/11-07/21/11</a>
+                                        </li>
+                                        <li><a href="#">06/28/11-07/21/11</a>
+                                        </li>
+                                        <li><a href="#">06/28/11-07/21/11</a>
+                                        </li>
+                                    </ul>
+                                </div>
+                            </div>
+
+                            <img src="img/Bar_Graph.png">
+                        </div>
+                        <div id="pie-chart" class="col-md-3">
+                            <h5>CHANNELS</h5>
+                            <img src="img/Pie_Graph.png">
+                            <h5>REFERRALS</h5>
+                            <img src="img/Pie_Graph.png">
+                        </div>
+                        <div id="socialmedia" class="col-md-8">
+                            <ul>
+                                <li>
+                                    <input type="checkbox" aria-label="...">
+                                    <img src="img/facebook_logo.png" </li>
+                                    <li>
+                                        <input type="checkbox" aria-label="...">
+                                        <img src="img/twitter_logo.png" </li>
+                                        <li>
+                                            <input type="checkbox" aria-label="...">
+                                            <img src="img/foursquare_logo.png" </li>
+                                            <li>
+                                                <input type="checkbox" aria-label="...">
+                                                <img src="img/google_logo.png" </li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div id="influence" class="col-lg-12 col-md-12">
+
+                        <img src="img/contacts.png">
+                        <img src="img/customers.png">
+
+                    </div>
+                    <div id="slider" class="col-lg-12 col-md-12">
+                        <div id="slider-txt">
+                            <p>DID YOU KNOW?
+                                <p>
+                                    <p>Maecenas sed diam eget risus varius blandit sit amet non magna. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam porta sem malesuada magna mollis euismod.
+                                    </p>
+                        </div>
+                    </div>
+
+
+                </div>
+            </div>
+        </div>
+        <div id="bottom-container">
+            <div id="photo-container">
+                <div class="photobox col-lg-4 col-md-4"></div>
+                <div class="photobox col-lg-4 col-md-4"></div>
+                <div class="photobox col-lg-4 col-md-4"></div>
+            </div>
+        </div>
+
+    </div>
+    <footer>
+    </footer>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
 </body>
 
 </html>
