--- a/index.html
+++ b/index.html
@@ -55,20 +55,42 @@
                 </p>
             </div>
             <div id="announcement-btn" class="col-lg-1">
-                <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-                <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+                <div class="pagebtn"><span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+                </div>
+                <div class="pagebtn"><span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+                </div>
             </div>
         </div>
 
         <div id="submain" class="row">
             <div class="col-lg-4 left-container">
                 <div id="task">
+                    <span class="glyphicon glyphicon-cog" aria-hidden="true" style="color:#979797;font-size:20px;float:right;padding-right:10px;"></span>
                     <h2>Tasks</h2>
+
                     <ul>
-                        <li>Welcome Contacts</li>
-                        <li>Provide Responses</li>
-                        <li>Review Activity</li>
-                        <li>Reach Out</li>
+                        <li>
+                            <div class="countcircle" style="background-color:#cccccc;">1</div>
+                            <span style="color:#cccccc;" class="task-txt">Welcome Contacts</span>
+                            <button class="btn btn-tasks"><span class="glyphicon glyphicon-user" aria-hidden="true" style="color:#cccccc;"></span><span style="color:#cccccc;">32</span>
+                            </button>
+                        </li>
+                        <li>
+                            <div class="countcircle">2</div>
+                            <span class="task-txt">Provide Responses</span>
+                            <button class="btn btn-tasks"><span class="glyphicon glyphicon-user" aria-hidden="true"></span>36</button>
+
+                        </li>
+                        <li>
+                            <div class="countcircle">3</div>
+                            <span class="task-txt">Review Activity</span>
+                            <button class="btn btn-tasks"><span class="glyphicon glyphicon-user" aria-hidden="true"></span>36</button>
+                        </li>
+                        <li style="border-bottom:none;">
+                            <div class="countcircle">4</div>
+                            <span class="task-txt">Reach Out</span>
+                            <button class="btn btn-tasks"><span class="glyphicon glyphicon-user" aria-hidden="true"></span>3</button>
+                        </li>
                     </ul>
                 </div>
 
@@ -152,10 +174,14 @@
             </div>
         </div>
         <div id="bottom-container">
-            <div id="photo-container">
-                <div class="photobox col-lg-4 col-md-4"></div>
-                <div class="photobox col-lg-4 col-md-4"></div>
-                <div class="photobox col-lg-4 col-md-4"></div>
+            <div id="promo">
+                <div class="photobox col-lg-4 col-md-4">
+                    <img src="img/promo_one.png" style="left:0px;">
+                </div>
+                <div class="photobox col-lg-4 col-md-4"><img src="img/promo_two.png" style="top:-13px;">
+                </div>
+                <div class="photobox col-lg-4 col-md-4"><img src="img/promo_three.png" style="right:0px;">
+                </div>
             </div>
         </div>
 
