--- a/index.html
+++ b/index.html
@@ -13,23 +13,38 @@
 
 <body>
     <header>
-        <div id="top-header"></div>
+        <div id="top-header">
+            <div style="float:right">
+                <ul>
+                    <li>
+                        <p>MINI of Raleigh</p>
+                    </li>
+                    <li><i class="fa fa-question-circle"></i>
+                    </li>
+                    <li><span class="glyphicon glyphicon-cog" aria-hidden="true" </span>
+                    </li>
+                </ul>
+
+            </div>
+        </div>
         <nav>
-            <ul>
-                <li id="nav-dashboard">
-                    <img src="img/Icon_Dashboard.png">
-                </li>
-                <li id="nav-customers">
-                    <img src="img/Icon_%20Customers.png">
-                </li>
-                <li id="nav-messages"> <img src="img/Icon_%20Messages.png" </li>
-                    <li id="nav-promotions"><img src="img/Icon_%20Promotions.png">
+            <div id="nav-bar">
+                <ul>
+                    <li id="nav-dashboard">
+                     s   <img src="img/Icon_Dashboard.png">
                     </li>
-                    <li id="nav-pagecreator"><img src="img/Icon_%20Page%20Creator.png">
+                    <li id="nav-customers">
+                        <img src="img/Icon_%20Customers.png">
                     </li>
-                    <li id="nav-analytics"><img src="img/Icon_%20Analytics.png">
-                    </li>
-            </ul>
+                    <li id="nav-messages"> <img src="img/Icon_%20Messages.png" </li>
+                        <li id="nav-promotions"><img src="img/Icon_%20Promotions.png">
+                        </li>
+                        <li id="nav-pagecreator"><img src="img/Icon_%20Page%20Creator.png">
+                        </li>
+                        <li id="nav-analytics"><img src="img/Icon_%20Analytics.png">
+                        </li>
+                </ul>
+            </div>
             <div id="nav-dropdown">
                 <div id="dropdown-text" class="col-lg-9">
                     <h2>Dashboard</h2>
@@ -65,7 +80,7 @@
         <div id="submain" class="row">
             <div class="col-lg-4 left-container">
                 <div id="task">
-                    <span class="glyphicon glyphicon-cog" aria-hidden="true" style="color:#979797;font-size:20px;float:right;padding-right:10px;"></span>
+                    <a href=#><span class="glyphicon glyphicon-cog" aria-hidden="true" style="color:#979797;font-size:20px;float:right;padding-right:10px;"></span></a>
                     <h2>Tasks</h2>
 
                     <ul>
@@ -98,10 +113,36 @@
                     <h2>Recommendations</h2>
 
                     <ul>
-                        <li>7 steps to getting more Fans</li>
-                        <li>Increase traction with more interactions</li>
-                        <li>Creating a Promotion</li>
-                        <li>Share More</li>
+                        <li>
+
+                            <img src="img/article_icon.png">
+
+                            <div class="rec-txt"><span>Article</span>
+                                <br>
+
+                                <p>7 steps to getting more Fans</p>
+                            </div>
+
+                        </li>
+                        <li><img src="img/article_icon.png">
+                            <div class="rec-txt"><span>Article</span>
+                                <br>
+                                <p>Increase traction with more interactions</p>
+                            </div>
+                        </li>
+                        <li><img src="img/checklist_icon.png">
+                            <div class="rec-txt"> <span>Checklist</span>
+                                <br>
+                                <p>Creating a Promotion</p>
+                            </div>
+                        </li>
+                        <li>
+                            <img src="img/tip_icon.png">
+                            <div class="rec-txt"> <span>Tip</span>
+                                <br>
+                                <p>Share More</p>
+                            </div>
+                        </li>
                     </ul>
                 </div>
             </div>
@@ -162,10 +203,20 @@
                     </div>
                     <div id="slider" class="col-lg-12 col-md-12">
                         <div id="slider-txt">
-                            <p>DID YOU KNOW?
-                                <p>
-                                    <p>Maecenas sed diam eget risus varius blandit sit amet non magna. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam porta sem malesuada magna mollis euismod.
-                                    </p>
+                            <div class="slider-btn" style="position:absolute;left:0px;top:50px;">
+                                <a href=#><img src="img/nav_back.png">
+                                </a>
+                            </div>
+                            <div style="padding:10px;">
+                                <p>DID YOU KNOW?
+                                    <p>
+                                        <p>Maecenas sed diam eget risus varius blandit sit amet non magna. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam porta sem malesuada magna mollis euismod.
+                                        </p>
+                            </div>
+                            <div class="slider-btn" style="position:absolute;right:0px;top:50px;">
+                                <a href=#><img src="img/nav_next.png">
+                                </a>
+                            </div>
                         </div>
                     </div>
 
@@ -178,7 +229,7 @@
                 <div class="photobox col-lg-4 col-md-4">
                     <img src="img/promo_one.png" style="left:0px;">
                 </div>
-                <div class="photobox col-lg-4 col-md-4"><img src="img/promo_two.png" style="top:-13px;">
+                <div class="photobox col-lg-4 col-md-4"><img src="img/promo_two.png" style="top:-13px;left:0px">
                 </div>
                 <div class="photobox col-lg-4 col-md-4"><img src="img/promo_three.png" style="right:0px;">
                 </div>
@@ -187,6 +238,17 @@
 
     </div>
     <footer>
+        <div id="left-footer" class="col-lg-offset-2 col-lg-3">
+            <span>Tutorials</span>
+            <span>Support</span>
+            <span>Blog</span>
+        </div>
+        <div id="mid-footer" class="col-lg-4">
+            <p><span>Ariel Winter</span> likes your <span>Win a Cooper Sweepstakes</span> Promotion</p>
+        </div>
+        <div id="right-footer" class="col-lg-3">
+            <span>Logout</span>
+        </div>
     </footer>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
