--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="css/stylesheet.css" />
-
+    <link rel="stylesheet" type="text/css" href="css/sprites.css" />
 </head>
 
 <body>
@@ -24,42 +24,47 @@
                     <li><span class="glyphicon glyphicon-cog" aria-hidden="true" </span>
                     </li>
                 </ul>
-
             </div>
         </div>
         <nav>
             <div id="nav-bar">
                 <ul>
                     <li id="nav-dashboard">
-                     s   <img src="img/Icon_Dashboard.png">
+                        <!--<img src="img/Icon_Dashboard.png">-->
+                        <div class="Icon_Dashboard">
                     </li>
                     <li id="nav-customers">
-                        <img src="img/Icon_%20Customers.png">
+                       
+                        <div class="Icon_Customers">
                     </li>
-                    <li id="nav-messages"> <img src="img/Icon_%20Messages.png" </li>
-                        <li id="nav-promotions"><img src="img/Icon_%20Promotions.png">
+                    <li id="nav-messages"> 
+                     
+                        <div class = "Icon_Messages">
+                    </li>
+                        <li id="nav-promotions">
+                            <div class = "Icon_Promotions">
                         </li>
-                        <li id="nav-pagecreator"><img src="img/Icon_%20Page%20Creator.png">
+                        <li id="nav-pagecreator">
+                            <div class = "Icon_PageCreator">
                         </li>
-                        <li id="nav-analytics"><img src="img/Icon_%20Analytics.png">
+                        <li id="nav-analytics">
+                            <div class = "Icon_Analytics">
                         </li>
                 </ul>
-            </div>
-            <div id="nav-dropdown">
-                <div id="dropdown-text" class="col-lg-9">
-                    <h2>Dashboard</h2>
                 </div>
-                <div id="searchbox" class="col-lg-3 col-xs-6">
-                    <div class="right-icon">
-                        <span class="glyphicon glyphicon-search" aria-hidden="true"></span>
-                        <input type="search" class="form-control">
+                <div id="nav-dropdown">
+                    <div id="dropdown-text" class="col-lg-9">
+                        <h2>Dashboard</h2>
+                    </div>
+                    <div id="searchbox" class="col-lg-3 col-xs-6">
+                        <div class="right-icon">
+                            <span class="glyphicon glyphicon-search" aria-hidden="true"></span>
+                            <input type="search" class="form-control">
+                        </div>
                     </div>
                 </div>
-            </div>
-
         </nav>
     </header>
-
     <div id="main">
         <div id="announcement" class="row">
             <div id="announcement-head" class="col-lg-2">
@@ -76,13 +81,11 @@
                 </div>
             </div>
         </div>
-
         <div id="submain" class="row">
             <div class="col-lg-4 left-container">
                 <div id="task">
                     <a href=#><span class="glyphicon glyphicon-cog" aria-hidden="true" style="color:#979797;font-size:20px;float:right;padding-right:10px;"></span></a>
                     <h2>Tasks</h2>
-
                     <ul>
                         <li>
                             <div class="countcircle" style="background-color:#cccccc;">1</div>
@@ -94,7 +97,6 @@
                             <div class="countcircle">2</div>
                             <span class="task-txt">Provide Responses</span>
                             <button class="btn btn-tasks"><span class="glyphicon glyphicon-user" aria-hidden="true"></span>36</button>
-
                         </li>
                         <li>
                             <div class="countcircle">3</div>
@@ -108,36 +110,30 @@
                         </li>
                     </ul>
                 </div>
-
                 <div id="recommendation">
                     <h2>Recommendations</h2>
-
                     <ul>
                         <li>
-
-                            <img src="img/article_icon.png">
-
+                            <div class = "article_icon"></div>
                             <div class="rec-txt"><span>Article</span>
                                 <br>
-
                                 <p>7 steps to getting more Fans</p>
                             </div>
-
                         </li>
-                        <li><img src="img/article_icon.png">
+                        <li> <div class = "article_icon"></div>
                             <div class="rec-txt"><span>Article</span>
                                 <br>
                                 <p>Increase traction with more interactions</p>
                             </div>
                         </li>
-                        <li><img src="img/checklist_icon.png">
+                        <li><div class = "checklist_icon"></div>
                             <div class="rec-txt"> <span>Checklist</span>
                                 <br>
                                 <p>Creating a Promotion</p>
                             </div>
                         </li>
                         <li>
-                            <img src="img/tip_icon.png">
+                            <div class = "tip_icon"></div>
                             <div class="rec-txt"> <span>Tip</span>
                                 <br>
                                 <p>Share More</p>
@@ -169,7 +165,6 @@
                                     </ul>
                                 </div>
                             </div>
-
                             <img src="img/Bar_Graph.png">
                         </div>
                         <div id="pie-chart" class="col-md-3">
@@ -182,24 +177,22 @@
                             <ul>
                                 <li>
                                     <input type="checkbox" aria-label="...">
-                                    <img src="img/facebook_logo.png" </li>
+                                   <div class = "facebook_logo">
                                     <li>
                                         <input type="checkbox" aria-label="...">
-                                        <img src="img/twitter_logo.png" </li>
+                                      <div class = "twitter_logo">
                                         <li>
                                             <input type="checkbox" aria-label="...">
-                                            <img src="img/foursquare_logo.png" </li>
+                                           <div class = "foursquare_logo">
                                             <li>
                                                 <input type="checkbox" aria-label="...">
-                                                <img src="img/google_logo.png" </li>
+                                                <div class = "google_logo">
                             </ul>
                         </div>
                     </div>
                     <div id="influence" class="col-lg-12 col-md-12">
-
                         <img src="img/contacts.png">
                         <img src="img/customers.png">
-
                     </div>
                     <div id="slider" class="col-lg-12 col-md-12">
                         <div id="slider-txt">
@@ -219,8 +212,6 @@
                             </div>
                         </div>
                     </div>
-
-
                 </div>
             </div>
         </div>
@@ -235,7 +226,6 @@
                 </div>
             </div>
         </div>
-
     </div>
     <footer>
         <div id="left-footer" class="col-lg-offset-2 col-lg-3">
